--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,1 +1,9 @@
-<h1>Bienvenue sur la homepage</h1>
+{% extends 'base.html.twig' %}
+{% block title 'Agence lorem ipsum'%}
+{% block body %}
+<div class="jumbotron text-center">
+<h1>Agence lorem ipsum</h1>
+<p> lorem ipsum dolor sit amet <p/>
+</div>
+
+{% endblock %}
