--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,9 +1,27 @@
 {% extends 'base.html.twig' %}
 {% block title 'Agence lorem ipsum'%}
 {% block body %}
-<div class="jumbotron text-center" >
+<div class="jumbotron text-center">
 <h1>Agence lorem ipsum</h1>
-<p> lorem ipsum dolor sit amet <p/>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit est nulla similique maiores, modi beatae iusto eaque impedit nam animi autem, facilis dolores vero nobis. Qui neque culpa quibusdam animi.   <p/>
+</div>
+<div class="container">
+<h2>Les derniers biens</h2>
+<div class="row flex">
+{% for property in properties %}
+<div class="col-3">
+<div class="card">
+<div class="card-body">
+<h5 class="czrd-title">
+<a href="#">{{ property.title }}</a>
+</h5>
+<p class="czrd-text">{{ property.city }} ({{ property.postalCode }})</p>
+<div class="text-primary">{{ property.price }}</div>
+</div>
+</div>
+</div>
+{% endfor %}
+</div>
 </div>
 
 {% endblock %}
