--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -14,7 +14,7 @@ Qui neque culpa quibusdam animi.</p>
 <div class="card">
 <div class="card-body">
 <h5 class="czrd-title">
-<a href="#">{{ property.title }}</a>
+<a href="{{ path('property.show', {id: property.id, slug: property.slug }) }}">{{ property.title }}</a>
 </h5>
 <p class="czrd-text">{{ property.city }} ({{ property.postalCode }})</p>
 <div class="text-primary" style="font-weight: bold; font-size: 2rem;">{{ property.formattedPrice }} €</div>
