--- a/templates/admin/property/edit.html.twig
+++ b/templates/admin/property/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block title 'Tous nos biens'%}
+{% block title 'Editer le bien'%}
 {% block body %}
 <div class="container mt-4">
-<h1>Voir tous nos biens</h1>
+<h1>Editer le bien</h1>
 </div>
 {% endblock %}
