feat: ajout de l'authentification

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,11 +1,10 @@
-{% extends 'base' %}
+{% extends 'base.html.twig' %}
 {% block title 'Agence lorem Ipsum'%}
 {% block body %}
 <div class="jumbotron text-center">
 <h1>Agence lorem Ipsum</h1>
 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati a voluptates neque pariatur dolor suscipit, distinctio necessitatibus facere nemo facilis esse voluptatem ullam et, quam vero sed error magnam id!</p>
 </div>
-{% endblock %}
 
 <div class="container">
 <h2>Les derniers biens</h2>
