--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,18 +31,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" {% if current_menu is defined and current_menu == 'properties' %} active {% endif %} href="{{path('property.index')}}">Acheter</a>
+        <a class="nav-link" {% if current_menu is defined and current_menu == 'properties' %} active {% endif %} href="{{ path('property.index') }}">Acheter</a>
       </li>     
     </ul>
     {% if app.user %}
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a href="{{ path('logout') }}" class="nav-link">Se déconnecter</a>
-        </li>
-      </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a href="{{ path('logout') }}" class="nav-link" >Se déconnecter</a>
+      </li>
+    </ul>
     {% endif %}
   </div>
 </nav>
         {% block body %}{% endblock %}
+       
     </body>
 </html>
