--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -10,5 +10,8 @@
         </div>    
 {% endfor %}
 </div>
+        <div clas=="pagination">
+                {{ knp_pagination_render(properties) }}
+        </div>
 </div>
 {% endblock %}
