--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,6 +1,25 @@
 {% extends 'base.html.twig' %}
 {% block title 'Tous nos biens'%}
 {% block body %}
+<div class="jumbotron mt-4">
+        <div class="container">
+                {{ form_start(form) }}
+                <div class="row align-items-end">
+                        <div class="col">
+                                {{ form_row(form.minSurface) }}
+                        </div>
+                        <div class="col">
+                                {{ form_row(form.maxPrice) }}
+                        </div>
+                        <div class="col">
+                                <div class="form-group">
+                                  <button class="btn btn-primary">Rechercher</button>
+                                </div>
+                        </div>
+                </div>
+                {{ form_end(form) }}
+        </div>
+</div>
 <div class="container mt-4">
 <h1>Voir tous nos biens</h1>
 <div class="row">
