feat: à continuer et delete templates/option

--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title 'Gérer les options'%}
+{% block title 'Gérer les biens'%}
 
 {% block body %}
 
 <div class="container mt-4">
-    <h1>Gérer les options</h1>
+    <h1>Gérer les biens</h1>
 
     {% for message in app.flashes('success') %}
         <div class="alert alert-success">
@@ -16,19 +16,19 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                <th>Nom</th>
+                <th>Titre</th>
                 <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-            {% for option in options %}
+            {% for property in properties %}
             <tr>
-                <td>{{ option.name }}</td>
+                <td>{{ property.title }}</td>
             <td>
-                <a href="{{ path('admin.option.edit', {id: option.id}) }}" class="btn btn-secondary">Editer</a>
-                <form method="post" action="{{ path('admin.option.delete', {id: option.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes vous vraiment sûr ?')">
+                <a href="{{ path('admin.property.edit', {id: property.id}) }}" class="btn btn-secondary">Editer</a>
+                <form method="post" action="{{ path('admin.property.delete', {id: property.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes vous vraiment sûr ?')">
                     <input type="hidden" name="_method" value="DELETE">
-                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ option.id) }}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id) }}">
                     <button class="btn btn-danger">Supprimer</button>
                 </form>
             </td>
@@ -38,7 +38,7 @@
 </tbody>
 </table>
     <div class="text-right">
-        <a href="{{ path('admin.option.new') }}" class="btn btn-primary">Créer un nouveau bien</a>
+        <a href="{{ path('admin.property.new') }}" class="btn btn-primary">Créer un nouveau bien</a>
      
     </div>
 </div>
