--- a/templates/admin/option/new.html.twig
+++ b/templates/admin/option/new.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <div class="container mt-4">
-<h1>Créer un nouveau bien</h1>
-{{ include ('admin/property/_form.html.twig', {button: 'Créer'}) }}
+<h1>Créer une nouvelle option</h1>
+{{ include ('admin/option/_form.html.twig', {button: 'Créer'}) }}
 </div>
 
 {% endblock %}
