--- a/templates/admin/property/edit.html.twig
+++ b/templates/admin/property/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-{% block title 'Editer l\'option'%}
+{% block title 'Editer le bien'%}
 {% block body %}
 <div class="container mt-4">
-<h1>Editer l'option</h1>
+<h1>Editer le bien</h1>
 {{ include ('admin/option/_form.html.twig', {form: form, button: 'Editer'}) }}
 </div>
 {% endblock %}
