--- a/templates/admin/property/edit.html.twig
+++ b/templates/admin/property/edit.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
 <div class="container mt-4">
 <h1>Editer le bien</h1>
-{{ include ('admin/option/_form.html.twig', {form: form, button: 'Editer'}) }}
+{{ include ('admin/option/_form.html.twig', {button: 'Editer'}) }}
 </div>
 {% endblock %}
