--- a/templates/admin/property/edit.html.twig
+++ b/templates/admin/property/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-{% block title 'Editer le bien'%}
+
 {% block body %}
 <div class="container mt-4">
 <h1>Editer le bien</h1>
-{{ include ('admin/option/_form.html.twig', {button: 'Editer'}) }}
+{{ include ('admin/property/_form.html.twig', {button: 'Editer'}) }}
 </div>
 {% endblock %}
