feat: système d'images

--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -6,7 +6,16 @@
 <div class="jumbotron">
     <div class="container">
         <div class="row">
-            <div class="col-md-8"></div>
+            <div class="col-md-8">
+                
+                {% if property.filename %}
+                    <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height:auto;">
+                {% else %}
+                    <img src="{{ '/images/properties/empty.jpg' | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height:auto;">
+                
+                {% endif %}
+            
+            </div>
             <div class="col-md-4">
                 <h1>{{ property.title }} </h1>
                 <h2>{{ property.rooms }} pièces - {{ property.surface }} m²</h2>
@@ -47,7 +56,12 @@
         </div>
     
         <div class="col-md-4">
-            <h2>Spécificités</h2>
+            <h3>Spécificités</h3>
+                <ul class="list-group">
+                    {% for key, option in property.options %}
+                        <li class="list-group-item {{ key%2 == 0 ? 'list-group-item-info':'' }}">{{ option.name }}</li>
+                    {% endfor %}    
+                </ul>
         </div>
     </div>
 </div>    
