--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -5,6 +5,16 @@
 {% block body %}
 <div class="jumbotron">
     <div class="container">
+
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+
+    {% if not form.vars.valid %}
+        <div class="alert alert-danger"> Vous avez fait une erreur au niveau du formulaire, attention de le remplir correctement</div>
+    {% endif %}
         <div class="row">
             <div class="col-md-8">
                 
