--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title 'Tous nos biens sont là'%}
+{% block title 'Tous nos biens'%}
 {% block body %}
 <div class="jumbotron">
         <div class="container">
