--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -30,8 +30,8 @@
                 <h1>{{ property.title }} </h1>
                 <h2>{{ property.rooms }} pièces - {{ property.surface }} m²</h2>
                 <div class="text-primary" style="font-weight:bold ; font-size : 4rem">{{ property.formattedPrice }} €</div>
-                <a href="#" class="btn btn-primary" id="contactButton"{% if form.vars.submitted %} style="display: none;"{% endif %}>Contacter l'agence</a>
-                <div id="contactForm" class="mt-4"{% if not form.vars.submitted %} style="display: none;"{% endif %}>
+                    <a href="#" class="btn btn-primary" id="contactButton"{% if form.vars.submitted %} style="display: none;"{% endif %}>Contacter l'agence</a>
+                <div id="contactForm" class="mt-4"{% if not form.vars.submitted %} style="display: block;"{% endif %}>
                     {{ form_start(form) }}
                     <div class="row">
                         <div class="col">{{ form_row(form.firstname) }}</div>
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col">{{ form_row(form.phone) }}</div>
                         <div class="col">{{ form_row(form.email) }}</div>
-                    </div>
+                    </div>                    
                     {{ form_rest(form) }}
                     <div class="form-group">
                         <button class="btn btn-primary">Envoyer</button>
