--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -16,7 +16,7 @@
 <h5 class="card-title">
 <a href="{{ path('property.show', {id: property.id, slug: property.slug}) }}">{{ property.title }}</a>
 </h5>
-<p classs="card-text">{{ property.city }} ( {{ property.postalCode }})</p>
+<p class="card-text">{{ property.city }} ( {{ property.postalCode }})</p>
 <div class="text-primary" style="   ">{{ property.formattedPrice }} €</div>
 </div>
 </div>
